# boustrophedon_planner

./: README.md
boustrophedon_example/: CMakeLists.txt  README.md  package.xml
boustrophedon_example/config/: console.config
boustrophedon_example/cutting/mowing/maps/: helipad-L.yaml  helipad.yaml  helipad_section_B.yaml  i360_parking.yaml  scholl_large.yaml  test-vertices.yaml  utm_very_small_area.yaml  washington_park_coords.yaml
boustrophedon_example/launch/: start_sim.launch
boustrophedon_example/scripts/: waypoint_extractor.py
boustrophedon_example/scripts/waypoints/: pure_pursuit.csv
boustrophedon_msgs/: CMakeLists.txt
boustrophedon_msgs/action/: PlanMowingPathParam.action
boustrophedon_msgs/msg/: PlanParameters.msg
boustrophedon_msgs/srv/: FindStartPoints.srv
boustrophedon_server/: CMakeLists.txt
boustrophedon_server/include/boustrophedon_server/: boustrophedon_planner_server.h  cgal_utils.h  outline_planner.h  striping_planner.h
boustrophedon_server/include/spline/: Curve.cpp  Curve.h
boustrophedon_server/launch/: boustrophedon_server.launch
boustrophedon_server/src/boustrophedon_server/: boustrophedon_planner_node.cpp  boustrophedon_planner_server.cpp  cgal_utils.cpp  outline_planner.cpp  striping_planner.cpp
boustrophedon_server/src/boustrophedon_server/cellular_decomposition/: polygon_decomposer.cpp
boustrophedon_server/test/: bplanner_client_test.test  gtest_main.cpp  gtest_ros_main.cpp
boustrophedon_server/test/src/: boustrophedon_planner_client_test.cpp  striping_planner_test.cpp
